Initial skeleton for tests

--- a/filesystem-directory/pom.xml
+++ b/filesystem-directory/pom.xml
@@ -37,5 +37,10 @@
             <version>1.0.0p1m1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
      </dependencies>
 </project>
