--- a/filesystem-file/pom.xml
+++ b/filesystem-file/pom.xml
@@ -42,5 +42,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.arjuna.dbutilities.testsupport</groupId>
+            <artifactId>dataflownodes-dummy</artifactId>
+            <version>1.0.0p1m1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
