--- a/filesystem-file/pom.xml
+++ b/filesystem-file/pom.xml
@@ -43,8 +43,20 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.arjuna.databroker</groupId>
+            <artifactId>data-core</artifactId>
+            <version>${version.com.arjuna.databroker}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.arjuna.dbutilities.testsupport</groupId>
             <artifactId>dataflownodes-dummy</artifactId>
+            <version>1.0.0p1m1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.arjuna.dbutilities.testsupport</groupId>
+            <artifactId>dataflownodes-lifecycle</artifactId>
             <version>1.0.0p1m1</version>
             <scope>test</scope>
         </dependency>
