--- a/filesystem-directory/pom.xml
+++ b/filesystem-directory/pom.xml
@@ -49,6 +49,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.arjuna.databroker</groupId>
+            <artifactId>data-core-jee</artifactId>
+            <version>${version.com.arjuna.databroker}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.arjuna.dbutilities.testsupport</groupId>
             <artifactId>dataflownodes-dummy</artifactId>
             <version>1.0.0p1m1</version>
