--- a/filesystem-file/pom.xml
+++ b/filesystem-file/pom.xml
@@ -55,15 +55,15 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.arjuna.dbutilities.testsupport</groupId>
+            <groupId>com.arjuna.dbutils.testsupport</groupId>
             <artifactId>dataflownodes-dummy</artifactId>
-            <version>1.0.0p1m1</version>
+            <version>1.0.0p2m1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.arjuna.dbutilities.testsupport</groupId>
+            <groupId>com.arjuna.dbutils.testsupport</groupId>
             <artifactId>dataflownodes-lifecycle</artifactId>
-            <version>1.0.0p1m1</version>
+            <version>1.0.0p2m1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
