--- a/filesystem-directory/pom.xml
+++ b/filesystem-directory/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>com.arjuna.dbplugins.filesystem</groupId>
         <artifactId>filesystem-plugin-parent</artifactId>
-        <version>1.0.0p1m1</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>filesystem-directory</artifactId>
@@ -57,13 +57,13 @@
         <dependency>
             <groupId>com.arjuna.dbutils.testsupport</groupId>
             <artifactId>dataflownodes-dummy</artifactId>
-            <version>1.0.0p2m1</version>
+            <version>${version.com.arjuna.dbutils.testsupport}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.arjuna.dbutils.testsupport</groupId>
             <artifactId>dataflownodes-lifecycle</artifactId>
-            <version>1.0.0p2m1</version>
+            <version>${version.com.arjuna.dbutils.testsupport}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
